cmake_minimum_required(VERSION 2.8)

project(DesignPattern)
add_subdirectory(SimpleFactory)
add_subdirectory(FactoryMethod)
add_subdirectory(AbstractFactory)
add_subdirectory(Builder)
add_subdirectory(Prototype)
add_subdirectory(Singleton)
add_subdirectory(Adapter)
add_subdirectory(Bridge)
add_subdirectory(Composite)
add_subdirectory(Decorator)
add_subdirectory(Facade)