cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)

project(DesignPattern)
add_subdirectory(SimpleFactory)
add_subdirectory(FactoryMethod)
add_subdirectory(AbstractFactory)
add_subdirectory(Builder)
add_subdirectory(Prototype)
add_subdirectory(Singleton)
add_subdirectory(Adapter)
add_subdirectory(Bridge)
add_subdirectory(Composite)
add_subdirectory(Decorator)
add_subdirectory(Facade)
add_subdirectory(Flyweight)
add_subdirectory(Proxy)
add_subdirectory(ChainOfResponsibility)
add_subdirectory(Command)
add_subdirectory(Iterator)
add_subdirectory(Mediator)
add_subdirectory(Memento)
add_subdirectory(Observer)
add_subdirectory(Visitor)
add_subdirectory(Strategy)
add_subdirectory(State)
add_subdirectory(TemplateMethod)
